k8s/app/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: egapro-app${HASH_BRANCH_NAME}
  labels:
    app: egapro-app${HASH_BRANCH_NAME}
    branch: egapro${HASH_BRANCH_NAME}
spec:
  selector:
    app: egapro-app${HASH_BRANCH_NAME}
  ports:
  - port: ${PORT}
    name: app
