k8s/app/ingress-prod.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: egapro-app
  labels:
    app: egapro-app
    branch: egapro
  annotations:
    kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: ${ENVIRONMENT}
    http:
      paths:
      - path: /
        backend:
          serviceName: egapro-app
          servicePort: ${PORT}
#  tls:
#  - secretName: egapro-crt-secret
